--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -2,6 +2,17 @@ body,html
   line-height:1
   font-weight: 200
   font-family: 'PingFang SC','STHeitiSC-Light','Helvetica-Light',arial,sans-serif
+
+.clearifx
+  display: inline-block
+  &:after
+    display: block
+    content:"."
+    height:0
+    line-height:0
+    clear:both
+    visibility: hidden
+    
 @media(-webkit-min-device-pixel-ratio:1.5),(min-device-pixel-ratio:1.5)
     .border-1px
       &::after
@@ -13,4 +24,5 @@ body,html
       &::after
         -webkit-transform: scaleY(0.5)
         transform: scaleY(0.5)
+
         
